Fix lesson id sequence