@@ -7,7 +7,6 @@ import com.victor.crudspring.model.Course;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class CourseMapper {
@@ -15,8 +14,7 @@ public class CourseMapper {
         if (course == null) {
             return null;
         }
-        List<LessonDTO> lessons = course.getLessons().stream()
-                .map(lesson -> new LessonDTO(lesson.getCourse().getId(), lesson.getName(), lesson.getYoutubeUrl())).collect(Collectors.toList());
+        List<LessonDTO> lessons = course.getLessons().stream().map(lesson -> new LessonDTO(lesson.getId(), lesson.getName(), lesson.getYoutubeUrl())).toList();
         return new CourseDTO(course.getId(), course.getName(), course.getCategory().getValue(), lessons);
 
     }
